# Code_Example

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  compile.sh
any_variant_optional/: README.md  main.cpp
array_len/: main.cpp
cast/: README.md  cast.h  main.cpp
color_modifier/: README.md  color_modifier.h  main.cpp
concept/: main.cpp
duration_of_time/: main.cpp
is_stl_container/: README.md  is_stl_container.h  main.cpp
move_semantics/: README.md  main.cpp  move_semantics.h
operations_on_matrices/: README.md  main.cpp
redirect_cout_to_file/: README.md  main.cpp
sfinae/: main.cpp
struct_to_cout/: main.cpp  struct_to_cout.hpp
thread_safe_queue/: README.md  main.cpp  thread_safe_queue.h
type_index/: README.md  main.cpp  type_index.h
wait_time_period/: README.md  main.cpp  wait_time_period.cpp
